--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipesRowLayout"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp">
 
@@ -30,7 +30,7 @@
             <ImageView
                 android:id="@+id/recipe_imageView"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,14 +57,81 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/description_textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:ellipsize="end"
+                android:maxLines="3"
                 android:text="TextView"
-                android:layout_marginTop="6dp"
+                android:textColor="@color/darkGray"
                 app:layout_constraintEnd_toEndOf="@+id/title_textView"
                 app:layout_constraintStart_toStartOf="@+id/title_textView"
                 app:layout_constraintTop_toBottomOf="@+id/title_textView" />
+
+            <ImageView
+                android:id="@+id/heart_imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="36dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/heart_textView"
+                app:layout_constraintStart_toStartOf="@+id/heart_textView"
+                app:layout_constraintTop_toBottomOf="@+id/description_textView"
+                app:layout_constraintVertical_bias="0.326"
+                app:srcCompat="@drawable/ic_heart"
+                app:tint="@color/red" />
+
+            <TextView
+                android:id="@+id/heart_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:textAlignment="center"
+                android:textColor="@color/red"
+                app:layout_constraintStart_toStartOf="@+id/description_textView"
+                app:layout_constraintTop_toBottomOf="@+id/heart_imageView" />
+
+            <ImageView
+                android:id="@+id/clock_imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/clock_textView"
+                app:layout_constraintStart_toStartOf="@+id/clock_textView"
+                app:layout_constraintTop_toTopOf="@+id/heart_imageView"
+                app:srcCompat="@drawable/ic_clock"
+                app:tint="@color/yellow" />
+
+            <TextView
+                android:id="@+id/clock_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="100"
+                android:textAlignment="center"
+                android:textColor="@color/yellow"
+                app:layout_constraintStart_toEndOf="@+id/heart_textView"
+                app:layout_constraintTop_toBottomOf="@+id/clock_imageView" />
+
+            <ImageView
+                android:id="@+id/leaf_imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/leaf_textView"
+                app:layout_constraintStart_toStartOf="@+id/leaf_textView"
+                app:layout_constraintTop_toTopOf="@+id/clock_imageView"
+                app:srcCompat="@drawable/ic_leaf" />
+
+            <TextView
+                android:id="@+id/leaf_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="100"
+                android:textAlignment="center"
+                app:layout_constraintStart_toEndOf="@+id/clock_textView"
+                app:layout_constraintTop_toBottomOf="@+id/leaf_imageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
