--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -63,7 +63,7 @@
                 android:layout_marginTop="12dp"
                 android:ellipsize="end"
                 android:maxLines="3"
-                android:text="TextView"
+                android:text="TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView "
                 android:textColor="@color/darkGray"
                 app:layout_constraintEnd_toEndOf="@+id/title_textView"
                 app:layout_constraintStart_toStartOf="@+id/title_textView"
