--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -74,6 +74,8 @@
             android:id="@+id/food_joke_error_imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            readApiResponse4="@{mainViewModel.foodJokeResponse}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:alpha="0.5"
             android:src="@drawable/ic_sad"
             android:visibility="invisible"
@@ -88,6 +90,8 @@
             android:id="@+id/food_joke_error_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            readApiResponse4="@{mainViewModel.foodJokeResponse}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:layout_marginTop="8dp"
             android:alpha="0.5"
             android:text="Error"
