Finished 25.5. Placeholder Row Layout - Dark Theme

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -19,6 +19,7 @@
     <!-- DARK THEME -->
 
     <color name="backgroundColor">@color/dark</color>
+    <color name="placeholderColor">@color/darker</color>
 
     // Custom Chip Style
     <color name="checkedChipBackgroundColor">@color/dark</color>
