--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -20,6 +20,7 @@
 
     <color name="backgroundColor">@color/dark</color>
     <color name="placeholderColor">@color/darker</color>
+    <color name="itemColor">@color/mediumGray</color>
 
     // Custom Chip Style
     <color name="checkedChipBackgroundColor">@color/dark</color>
